# AOCF

./: CMakeLists.txt  README.md
example/: main.cpp
include/: aocf.h  aocf_platform.h
include/aocf/: aocf.h  aocf_gl.h  aocf_keyboard.h  aocf_platform.h
src/: aocf_gl.cpp  aocf_keyboard.cpp  aocf_platform_win64.cpp  aocf_platform_x11.cpp
test/: test_aocf.cpp
